Fixed the z-index of animation

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -25,20 +25,11 @@ body {
     position: fixed;
     left: 0;
     top: 0;
-    z-index: -1;
+    z-index: -3;
     background-position: 50% 50%;
     background-repeat: no-repeat;
     background-size: cover;
   }
-}
-
-.particles {
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  z-index: -1;
 }
 
 body::-webkit-scrollbar {
@@ -94,6 +85,7 @@ a {
   width: 100%;
   height: 100%;
   overflow: hidden;
+  z-index: -1;
 }
 .circles li {
   position: absolute;
